<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16sp"
    tools:context=".MoveForResultActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_number"
        android:textSize="20dp" />
    <RadioGroup
        android:id="@+id/rgNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rb50"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_50"/>

        <RadioButton
            android:id="@+id/rb100"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_100"/>

        <RadioButton
            android:id="@+id/rb150"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_150"/>

    </RadioGroup>

    <Button
        android:id="@+id/btChoose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose"/>
</LinearLayout>